name:                zxemu
version:             0.1.0.0
synopsis:            ZX Spectrum emulator written in Haskell
description:         Please see README.md
homepage:            https://github.com/oshyshko/zxemu#readme
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Shyshko
maintainer:          oshyshko@gmail.com
copyright:           2016 Oleksandr Shyshko
category:            Standalone
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22.5

executable zxemu-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  -- ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , OpenGL
                     , GLFW
                     , GLUT
  default-language:    Haskell2010

test-suite zxemu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zxem-exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  -- ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oshyshko/zxemu
